--- a/app/src/main/res/layout/content_notification.xml
+++ b/app/src/main/res/layout/content_notification.xml
@@ -10,16 +10,15 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".MainActivity"
-    tools:showIn="@layout/activity_main">
+    tools:context="org.no_ip.varunbarad.playground.activity.NotificationActivity"
+    tools:showIn="@layout/activity_notification">
 
     <android.support.v7.widget.AppCompatButton
-        android:id="@+id/button_notification"
+        android:id="@+id/button_small_notifications"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:maxHeight="@dimen/size_button_max"
         android:minHeight="@dimen/size_button_min"
         android:onClick="onClick"
-        android:text="Notification" />
-
+        android:text="Show Small Notification" />
 </LinearLayout>
