--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,8 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+
+    <!-- Size constraints for normal buttons. -->
+    <dimen name="size_button_min">50dp</dimen>
+    <dimen name="size_button_max">75dp</dimen>
 </resources>
