--- a/app/src/main/res/layout/activity_notification_result.xml
+++ b/app/src/main/res/layout/activity_notification_result.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="org.no_ip.varunbarad.playground.activity.notification.NotificationActivity">
+    tools:context="org.no_ip.varunbarad.playground.activity.notification.NotificationResultActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -21,6 +21,6 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_notification" />
+    <include layout="@layout/content_notification_result" />
 
 </android.support.design.widget.CoordinatorLayout>
